Fix Twitter card preview
`display: table` allows the box to expand its boundaries when text
overflows.

Resolves: https://github.com/jmau111/jm-twitter-cards/issues/87

--- a/css/preview.css
+++ b/css/preview.css
@@ -50,7 +50,7 @@
 }
 
 .tc-preview .tc-summary {
-    display: table;
+    display: block;
     width: 100%
 }
 
